test/MC/SVE/regression-tests/negative_tests/sve-st3w-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32E3Store4LSSZ
// Offset register Rm cannot be xzr
st3w {z28.s, z29.s, z30.s}, p3, [x2, xzr, lsl #2]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
